fix quality 2